News UAT/force-app/main/default/objects/CCNBatchJobSetting__c/CCNBatchJobSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Define the setting for running the CCN EmailMessage Batch</description>
    <label>CCNBatchJobSetting</label>
</CustomObject>