News UAT/force-app/main/default/objects/CCNBatchJobSetting__c/fields/Cloned_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Email_Message__c</fullName>
    <description>Defines the message for the cloned records in the CCN EmailMessage Batch</description>
    <label>Cloned Email Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>