News UAT/force-app/main/default/objects/CCNBatchJobSetting__c/fields/Is_Case_Batch_Running__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Batch_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2015-07 CCN</description>
    <inlineHelpText>This flag will by-pass trigger and workflow that are Case related</inlineHelpText>
    <label>Is Case Batch Running?</label>
    <type>Checkbox</type>
</CustomField>